[gd_scene load_steps=25 format=2]

[ext_resource path="res://scenes/menus/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/symbol.png" type="Texture" id=2]
[ext_resource path="res://resources/themes/button_theme.tres" type="Theme" id=3]
[ext_resource path="res://resources/fonts/Poppins-Medium.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scenes/menus/SceneTransition.tscn" type="PackedScene" id=5]
[ext_resource path="res://resources/shaders/noise.gdshader" type="Shader" id=6]
[ext_resource path="res://resources/shaders/outline.tres" type="Shader" id=7]
[ext_resource path="res://resources/shaders/blur.tres" type="Shader" id=9]
[ext_resource path="res://assets/audio/howard.ogg" type="AudioStream" id=10]
[ext_resource path="res://assets/textures/friend_icon.png" type="Texture" id=11]
[ext_resource path="res://resources/shaders/vignette.gdshader" type="Shader" id=12]
[ext_resource path="res://resources/fonts/Poppins-BoldItalic.ttf" type="DynamicFontData" id=13]

[sub_resource type="ShaderMaterial" id=10]
shader = ExtResource( 12 )
shader_param/color = Color( 0, 0, 0, 1 )
shader_param/multiplier = 0.203
shader_param/softness = 0.778

[sub_resource type="ShaderMaterial" id=13]
shader = ExtResource( 6 )
shader_param/color = Color( 1, 1, 1, 1 )
shader_param/bg_color = Color( 1, 1, 1, 0 )
shader_param/mix_amount = 0.5
shader_param/OCTAVES = 3
shader_param/LAYERS = 10.0
shader_param/SPEED = 0.025
shader_param/ZOOM = 2.0

[sub_resource type="ShaderMaterial" id=8]
shader = ExtResource( 9 )
shader_param/blur_amount = 2.5

[sub_resource type="NoiseTexture" id=9]

[sub_resource type="NoiseTexture" id=6]
width = 640
height = 1440

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 7 )
shader_param/width = 12.0
shader_param/outline_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=1]
size = 32
use_mipmaps = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=11]
size = 100
font_data = ExtResource( 13 )

[sub_resource type="Theme" id=12]
default_font = SubResource( 11 )

[sub_resource type="CanvasItemMaterial" id=14]

[sub_resource type="DynamicFont" id=15]
size = 50
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=16]
default_font = SubResource( 15 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 1 )

[node name="VideoPlayer" type="VideoPlayer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
autoplay = true

[node name="Vignette" type="ColorRect" parent="."]
material = SubResource( 10 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Noise" type="ColorRect" parent="."]
material = SubResource( 13 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Blur" type="TextureRect" parent="."]
material = SubResource( 8 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 160.0
margin_right = -1760.0
texture = SubResource( 9 )
expand = true

[node name="Strip" type="TextureRect" parent="."]
self_modulate = Color( 1, 1, 1, 0.392157 )
light_mask = 0
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 160.0
margin_top = -720.0
margin_right = 800.0
margin_bottom = 720.0
texture = SubResource( 6 )

[node name="Logo" type="TextureRect" parent="Strip"]
material = SubResource( 4 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_top = -400.0
margin_bottom = -400.0
rect_scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="Strip"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -80.0
margin_right = 640.0
margin_bottom = 268.0
theme = ExtResource( 3 )

[node name="Connect" type="Button" parent="Strip/VBoxContainer"]
margin_right = 640.0
margin_bottom = 84.0
focus_neighbour_top = NodePath("../Exit")
theme = ExtResource( 3 )
text = " Connect"

[node name="Library" type="Button" parent="Strip/VBoxContainer"]
margin_top = 88.0
margin_right = 640.0
margin_bottom = 172.0
text = " Card Library"

[node name="Options" type="Button" parent="Strip/VBoxContainer"]
margin_top = 176.0
margin_right = 640.0
margin_bottom = 260.0
text = " Options"

[node name="Exit" type="Button" parent="Strip/VBoxContainer"]
margin_top = 264.0
margin_right = 640.0
margin_bottom = 348.0
focus_neighbour_bottom = NodePath("../Connect")
text = " Exit"
expand_icon = true

[node name="Tag" type="Label" parent="Strip"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -190.0
margin_right = 640.0
margin_bottom = -50.0
grow_horizontal = 0
custom_fonts/font = SubResource( 1 )
text = "Â© everyone else 2004 - 2022
A game by Spooticus (mostly)"
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="Version" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -205.0
margin_top = -91.0
grow_horizontal = 0
text = "v.0.0.0a"

[node name="OfflineMode" type="Label" parent="."]
self_modulate = Color( 1, 1, 1, 0.501961 )
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 12 )
text = "OFFLINE MODE "
align = 2

[node name="LabelUsername" type="Label" parent="."]
self_modulate = Color( 1, 1, 1, 0.501961 )
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 12 )
align = 2

[node name="FriendButton" type="TextureButton" parent="."]
margin_right = 160.0
margin_bottom = 160.0
rect_min_size = Vector2( 160, 160 )
texture_normal = ExtResource( 11 )
expand = true

[node name="Label" type="Label" parent="FriendButton"]
material = SubResource( 14 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 80.0
theme = SubResource( 16 )
text = "20"
align = 1
valign = 2
autowrap = true
uppercase = true

[node name="SceneTransition" parent="." instance=ExtResource( 5 )]
visible = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -20.0

[node name="VScrollBar" type="VScrollBar" parent="."]
margin_right = 12.0
margin_bottom = 12.0

[connection signal="pressed" from="Strip/VBoxContainer/Connect" to="." method="_on_Connect_pressed"]
[connection signal="pressed" from="Strip/VBoxContainer/Library" to="." method="_on_Library_pressed"]
[connection signal="pressed" from="Strip/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Strip/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="FriendButton" to="." method="_on_FriendButton_pressed"]
